fixed spacing errors

--- a/style.scss
+++ b/style.scss
@@ -7,10 +7,16 @@ $theme1-1:#0000ffaa;
 
 
 
+*{
+    margin: 0%;
+}
+
 body{
    
+   max-width: 100vw;
     background: rgb(255, 255, 255);
-    z-index: 20;
+    z-index: 200;
+    font-family: 'Titillium Web', sans-serif;
 }
 #card-container{
 
@@ -27,10 +33,10 @@ body{
   
 
 }
-#card{
-    
+.card{
+
     z-index: inherit;
-    font-family: 'Titillium Web', sans-serif;
+    
     
     padding: min(4vw,4vh);
     border: .4vh solid #1111116c ;
@@ -38,7 +44,7 @@ body{
     display: flex;
     flex-direction: column;
   
-    gap: min(3vh,3vw);
+    gap: 2vw;
    
     width: 60%;
     backdrop-filter: blur(6px);
@@ -51,7 +57,17 @@ body{
         font-size: min(8vw,8vh);
     }
     p{
+
+        color: #000;
         font-size: max(2.2vw,2.2vh);
+    }
+    img{
+        position:absolute;
+        right: -25vh;
+        width: 300px;
+        top: -15vh;
+        border-radius: 200vw;
+        z-index: -1;
     }
     #buttons{
         display: flex;
@@ -84,4 +100,11 @@ body{
         }
        
     }
+}
+
+#hero{
+    position: relative;
+
+    color: rgb(0, 0, 0);
+
 }
